Tweak whitespace (ugh) and include full source in main

--- a/copypaste.html
+++ b/copypaste.html
@@ -4,11 +4,9 @@
 <link href="//stenington.github.io/roborampage/src/style.css" rel="stylesheet" type="text/css">
 <title>Roborampage</title>
 <script src="//stenington.github.io/roborampage/src/vendor/coquette.js"></script>
-<script src="//stenington.github.io/roborampage/src/roborampage.js"></script>
 <script src="//stenington.github.io/roborampage/src/thimble-focus.js"></script>
 
 <a href="https://github.com/stenington/roborampage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
-
 <h1>ROBORAMPAGE</h1>
 <a class="help" href="what.html"><small>What is this?</small></a>
 <div class="container">
@@ -46,7 +44,259 @@
   <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
 </section>
 
+<script>
+// Add a method to Coquette's Maths module
+Coquette.Collider.Maths.scaleVector = function (vector, scale) {
+  return {
+    x: vector.x * scale,
+    y: vector.y * scale
+  };
+};
 
+// Define our entity classes and base classes
+function Base() {}
+
+Base.prototype.init = function (game, settings) {
+  this.game = game;
+  this.c = game.c;
+  for (var i in settings) {
+    this[i] = settings[i];
+  }
+  this.color = this.colors['alive'];
+};
+
+Base.prototype.draw = function(ctx) {
+  ctx.fillStyle = this.color;
+  ctx.fillRect(this.center.x - this.size.x / 2,
+               this.center.y - this.size.y / 2,
+               this.size.x,
+               this.size.y);
+};
+
+Base.prototype.keepInBounds = function() {
+  this.center.x = Math.max(0, this.center.x);
+  this.center.x = Math.min(this.game.width, this.center.x);
+  this.center.y = Math.max(0, this.center.y);
+  this.center.y = Math.min(this.game.height, this.center.y);
+};
+
+Base.prototype.moveBy = function (direction, magnitude) {
+  var v = Coquette.Collider.Maths.unitVector(direction);
+  v = Coquette.Collider.Maths.scaleVector(v, magnitude);
+  this.center.x += v.x;
+  this.center.y += v.y;
+};
+
+
+function Person(game, settings) {
+  this.init(game, settings);
+  return this;
+}
+
+Person.prototype = new Base();
+
+Person.prototype.update = function() {
+  this.currentSpeed = this.speed.walk;
+  this.direction = {x:0, y:0};
+
+  Object.keys(this.controls).forEach(function(key) {
+    var spec = this.controls[key];
+    if (typeof spec === 'function') {
+      if (this.c.inputter.isDown(this.c.inputter[key])) {
+        spec.call(this);
+      }
+    }
+    else if (spec.down || spec.up) {
+      if (spec.down && this.c.inputter.isDown(this.c.inputter[key])) {
+        spec.down.call(this);
+      }
+      if (spec.up && !this.c.inputter.isDown(this.c.inputter[key])) {
+        spec.up.call(this);
+      }
+    }
+    else if (spec.pressed) {
+      if (this.c.inputter.isPressed(this.c.inputter[key])) {
+        spec.pressed.call(this);
+      }
+    }
+  }.bind(this));
+
+  if (this.onUpdate) this.onUpdate();
+
+  this.move();
+}
+
+Person.prototype.move = function() {
+  if (!Coquette.Collider.Maths.magnitude(this.direction)) return;
+  this.moveBy(this.direction, this.currentSpeed);
+  this.keepInBounds();
+};
+
+Person.prototype.collision = function(other, type) {
+  this.dead = true;
+  this.color = this.colors['dead'];
+};
+
+Person.prototype.controls = {
+  'UP_ARROW': function () { this.direction.y += -1; },
+  'DOWN_ARROW': function () { this.direction.y += 1; },
+  'LEFT_ARROW': function () { this.direction.x += -1; },
+  'RIGHT_ARROW': function () { this.direction.x += 1; },
+  'SHIFT': function () {
+    this.currentSpeed = this.speed.run;
+  },
+  'SPACE': {
+    pressed: function warp() {
+      this.center.x = Math.random() * this.game.width;
+      this.center.y = Math.random() * this.game.height;
+    }
+  }
+};
+
+function Robot(game, settings) {
+  this.init(game, settings);
+  if (this.attackStrategy === 'random') {
+    var names = Object.keys(this.attacks);
+    this.attackStrategy = names[Math.floor(Math.random() * names.length)];
+  }
+  if (this.waitStrategy === 'random') {
+    var names = Object.keys(this.waits);
+    this.waitStrategy = names[Math.floor(Math.random() * names.length)];
+  }
+  this.move = this.attacks[this.attackStrategy];
+  this.wait = this.waits[this.waitStrategy];
+  return this;
+};
+
+Robot.prototype = new Base();
+
+Robot.prototype.update = function() {
+  if (!this.wreck) {
+    if (this.c.inputter.isDown(this.c.inputter.UP_ARROW)
+        || this.c.inputter.isDown(this.c.inputter.DOWN_ARROW)
+        || this.c.inputter.isDown(this.c.inputter.LEFT_ARROW)
+        || this.c.inputter.isDown(this.c.inputter.RIGHT_ARROW)) this.move();
+    else this.wait();
+  }
+};
+
+Robot.prototype.collision = function(other, type) {
+  if (other instanceof Robot) {
+    this.wreck = true;
+    this.color = this.colors['dead'];
+  }
+};
+
+Robot.prototype.attacks = {
+  direct: function directAttack() {
+    var v = Coquette.Collider.Maths.vectorTo(this.center, this.target.center);
+    this.moveBy(v, this.speed.walk);
+  },
+  compass: function compassAttack() {
+    var v = {x:0, y:0};
+    var dx = this.target.center.x - this.center.x;
+    var dy = this.target.center.y - this.center.y;
+    if (dx < -1) v.x = -1;
+    else if (dx > 1) v.x = 1;
+    if (dy < -1) v.y = -1;
+    else if (dy > 1) v.y = 1;
+    this.moveBy(v, this.speed.walk);
+  }
+};
+
+Robot.prototype.waits = {
+  roam: function () {
+    if (!this.wanderTarget) {
+      var wanderDistance = 100;
+      this.wanderTarget = {
+        x: this.center.x + ((Math.random() * wanderDistance) - wanderDistance/2),
+        y: this.center.y + ((Math.random() * wanderDistance) - wanderDistance/2)
+      };
+      this.wanderTicks = Math.random() * 600;
+    }
+    var v = Coquette.Collider.Maths.vectorTo(this.center, this.wanderTarget);
+    this.moveBy(v, 0.2);
+    this.keepInBounds();
+    this.wanderTicks--;
+    if (this.wanderTicks <= 0) {
+      this.wanderTarget = undefined;
+    }
+  },
+  wait: function() {}
+};
+
+function extend() {
+  var args = Array.prototype.slice.apply(arguments);
+  return args.reduce(function(prev, curr, idx, arr) {
+    if (!curr) return prev;
+    for(var key in curr) {
+      prev[key] = curr[key];
+    }
+    return prev;
+  }, {});
+}
+
+// Define the Game
+function Game(settings) {
+  settings = settings || {};
+  for (var i in settings) {
+    this[i] = settings[i];
+  }
+
+  this.win = this.win || function () {};
+  this.lose = this.lose || function () {};
+  this.enemies = this.hasOwnProperty('enemies') ? this.enemies : 10;
+
+  this.c = new Coquette(this, "canvas", this.width, this.height, this.background, true);
+
+  // Our intrepid player
+  var playerDefaults = {
+    center: { x:this.width/2, y:this.height/2 },
+    size: { x:9, y:9 },
+    speed: { walk:2.4, run:3.6 },
+    colors: { alive:"#2aa198", dead:"#2aa198" }
+  };
+  var player = this.c.entities.create(Person, extend(playerDefaults, settings.player));
+
+  // The evil robots!
+  var robotDefaults = {
+    size: { x:9, y:9 },
+    speed: { walk: 2.6 },
+    attackStrategy: 'compass',
+    waitStrategy: 'roam',
+    colors: { alive: "#d33682", dead:  "#dc322f" },
+    target: player
+  };
+  for (var i=0; i<this.enemies; i++) {
+    this.c.entities.create(Robot, extend({
+      center: {
+        x: Math.random() * 500,
+        y: Math.random() * 500
+      }
+    }, robotDefaults, settings.robot));
+  }
+};
+
+Game.prototype.update = function(interval) {
+  var allDead = true;
+  this.c.entities.all(Person).forEach(function (person) {
+    if (!person.dead) allDead = false;
+  });
+  if (allDead) {
+    this.lose();
+    this.c.ticker.stop();
+  }
+
+  var allWrecked = true;
+  this.c.entities.all(Robot).forEach(function (robot) {
+    if (!robot.wreck) allWrecked = false;
+  });
+  if (allWrecked) {
+    this.win();
+    this.c.ticker.stop();
+  }
+};
+</script>
 <script>
 function showMessage(msg) {
   var el = document.getElementById('message');
@@ -82,5 +332,3 @@ window.addEventListener('load', function() {
   });
 });
 </script>
-
-
